fix text overlapping

--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -281,7 +281,7 @@
   }
 
   .about_maina_para{
-    /* text-align: left; */
+    text-align: left;
   }
 
   .abo{
